<resources>
    <string name="app_name">HoneyComb</string>
    <string name="welcome">Welcome to Honeycomb!</string>
    <string name="checkFlight">Check Flights</string>
    <string name="checkPinnedFlight">Check Pinned Flight</string>
    <string name="checkWeather">Check Weather</string>
    <string name="checkPinnedWeather">Check Pinned Weather</string>
    <string name="checkRisk">Check Covid Travel Risk</string>
    <string name="flight">Flights</string>
    <string name="weather">Weather</string>
    <string name="risk">Covid Travel Risk</string>
    <string name="search">Search</string>
    <string name="searchFlight">Search via Flight Number</string>
    <string name="searchCity">Search City</string>
    <string name="searchCountry">Search Country</string>
    <string name="helloFragment1">Hello Fragment 1</string>
    <string name="helloFragment2">Hello Fragment 2</string>


    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="total">Total</string>
    <string name="deaths">Deaths</string>
    <string name="covid_19">Covid-19</string>
    <string name="country">Country</string>
    <string name="cases">Cases</string>
    <string name="increment_number">+232325</string>
    <string name="number">2323236544</string>
</resources>