<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:paddingTop="100dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/checkFlight"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="center"
            android:text="@string/checkFlight"
            android:textSize="20sp" />

        <Button
            android:id="@+id/checkPinnedFlight"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="center"
            android:text="@string/checkPinnedFlight"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/checkWeather"
            android:text="@string/checkWeather"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/checkPinnedWeather"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="center"
            android:text="@string/checkPinnedWeather"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/checkRisk"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/checkRisk"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_fragment1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/ProfilePage"
                android:layout_width="300dp"
                android:layout_height="67dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="Profile Page" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>