<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Weather_Activity">

    <TextView
        android:id="@+id/Weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:textSize="30sp"
        android:layout_marginTop="55dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/searchWeather"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/searchCity"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        android:layout_below="@id/Weather"/>

    <Button
        android:id="@+id/searchWeatherButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/search"
        android:layout_toEndOf="@id/searchWeather"
        android:layout_below="@id/Weather"/>


</RelativeLayout>
